Actual new line added

--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -4,7 +4,7 @@
     <title>CSESoc Website | {{index . "title"}}</title>
   </head>
   <body>
-    <h1>{{index . "message"}}<br></h1>
+    <h1>{{index . "message"}}</h1>
   </body>
 </html>
 {{end}}
