Add grid system.

--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -16,6 +16,10 @@ $error-color: #FF0066;
 $warning-color: #FF6600;
 $success-color: #00FF66;
 
+// ----------------------------------------------------------------------
+	// Layout Breakpoints
+// ----------------------------------------------------------------------
+$maxWidth: 1280;
 
 // ----------------------------------------------------------------------
 	// Font Sizes
