Remove grid scss system.

--- a/frontend/src/styles/abstracts/_mixins.scss
+++ b/frontend/src/styles/abstracts/_mixins.scss
@@ -47,8 +47,8 @@
 
 // ----------------------------------------------------------------------
 // @import "mixins/background-cover";
-@import "mixins/box-model";
-@import "mixins/clearfix";
+// @import "mixins/box-model";
+// @import "mixins/clearfix";
 // @import "mixins/inline-block";
 
 // ----------------------------------------------------------------------
