--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -5,11 +5,10 @@
 @import "base/reset";
 @import "base/typography";
 
-@import "components/button";
+@import "components/buttons";
 @import "components/links";
 
 @import "layout/footer";
 @import "layout/forms";
-@import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";
