--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -7,21 +7,86 @@
 // ----------------------------------------------------------------------
 	// #Type Scale
 // ----------------------------------------------------------------------
-$text-xs: 1em / math.pow($text-scale-ratio, 2);
-$text-sm: 1em / math.pow($text-scale-ratio, 1);
-$text-md: 1em / math.pow($text-scale-ratio, 1);
-$text-lg: 1em / math.pow($text-scale-ratio, 2);
-$text-xl: 1em / math.pow($text-scale-ratio, 3);
-$text-xxl: 1em / math.pow($text-scale-ratio, 4);
-$text-xxxl: 1em / math.pow($text-scale-ratio, 5);
+$text-xs: 1em / math.pow($text-scale-ratio, 1);   //caption
+$text-sm: 1em / math.pow($text-scale-ratio, 0.5); //button
+$text-md: 1em * math.pow($text-scale-ratio, 4);   // h4
+$text-lg: 1em * math.pow($text-scale-ratio, 5);   // h3
+$text-xl: 1em * math.pow($text-scale-ratio, 6);   // h2
+$text-xxl: 1em * math.pow($text-scale-ratio, 8);  //h1
+$text-xxxl: 1em * math.pow($text-scale-ratio, 9);
+
+// ----------------------------------------------------------------------
+	// #Line Height
+// ----------------------------------------------------------------------
+$heading-line-height: 1.5;
+$body-line-height:1.2;
+
+// ----------------------------------------------------------------------
+	// #Spacing Values
+// ----------------------------------------------------------------------
+$space-xxxs: 0.25em;
+$space-xxs:  0.375em;
+$space-xs:   0.5em;
+$space-sm:   0.75em;
+$space-md:   1.25em;
+$space-lg:   2em;
+$space-xl:   3.25em;
+$space-xxl:  5.25em;
+$space-xxxl: 8.5em;
 
 body {
   font-size: $text-base-size;
-  font-family: 'Quicksand', sans-serif;
 }
 
-// h1, h2, h3, h4, form legend {
-//   margin-bottom: var(--space-xxs);
-//   line-height: var(--heading-line-height);
-// }
+h1, h2, h3, h4, form legend {
+  margin-bottom: $space-xxs;
+  line-height: $heading-line-height;
+}
 
+// ----------------------------------------------------------------------
+	// #Text Size
+// ----------------------------------------------------------------------
+.text--xxxl {
+  font-size: $text-xxxl;
+}
+
+h1, .text--xxl {
+  font-size: $text-xxl;
+}
+
+h2, .text--xl {
+  font-size: $text-xl;
+}
+
+h3, .text--lg {
+  font-size: $text-lg;
+}
+
+h4, .text--md {
+  font-size: $text-md;
+}
+
+.text--sm, small {
+  font-size: $text-sm;
+}
+
+.text--xs {
+  font-size: $text-xs;
+}
+
+p {
+    line-height: $body-line-height;
+}
+
+// ----------------------------------------------------------------------
+	// #Text Component - class used to stylize blocks
+// ----------------------------------------------------------------------
+.text-container {
+  h2, h3, h4 {
+    margin-top: $space-sm;
+  }
+
+  ul, ol, p {
+    margin-bottom: $space-md;
+  }
+}
