--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -10,5 +10,6 @@
 
 @import "layout/footer";
 @import "layout/forms";
+@import "layout/grid";
 @import "layout/header";
 @import "layout/navigation";
