CW-173 SCSS Components for Stylesheet (#88)
* Reorganise files for intuitive hierarchy.

* Add grid system.

* Add Resources to test scss grid system.

* Resolve import lint error.

* Resolve import lint error.

* Add resources page to test scss.

* Add global import for scss import file.

* Remove grid scss system.

* Create template for typography.

* Refactor main vue.

Upon reading documentation for Vuetify and its Application Service, it
was found that the structure in App.vue did not adhere to the layout
defined by Vuetify.

* Remove unused fonts.

* Revert comment of font family.

* Remove font family variable.

* Update text scaling ratio

* Fix text scaling and add space values.

* Implement grid system and grid mixin.

* Adhere to BEM-like naming convention.

* Resolve differences in Windows line ending.

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,8 +1,15 @@
-@import "setup/mixins";
-@import "setup/typography";
-@import "setup/variables";
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-@import "basics/buttons";
-@import "basics/links";
+@import "base/reset";
+@import "base/typography";
 
-@import "layout/layout";
+@import "components/buttons";
+@import "components/links";
+
+@import "layout/footer";
+@import "layout/forms";
+@import "layout/grid";
+@import "layout/header";
+@import "layout/navigation";
