Refactor spacing variables into its own scss.

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -4,6 +4,7 @@
 
 @import "base/reset";
 @import "base/typography";
+@import "base/spacing";
 
 @import "components/buttons";
 @import "components/links";
