--- a/frontend/src/styles/base/_spacing.scss
+++ b/frontend/src/styles/base/_spacing.scss
@@ -14,3 +14,11 @@ $space-lg: 2em;
 $space-xl: 3.25em;
 $space-xxl: 5.25em;
 $space-xxxl: 8.5em;
+
+// ----------------------------------------------------------------------
+  // #Default Values
+// ----------------------------------------------------------------------
+div {
+  @include padding(10px, 10px, 10px, 10px);
+  @include margin(20px, 0, 10px, 0px);
+}
