Remove default spacing.

--- a/frontend/src/styles/base/_spacing.scss
+++ b/frontend/src/styles/base/_spacing.scss
@@ -18,7 +18,7 @@ $space-xxxl: 8.5em;
 // ----------------------------------------------------------------------
   // #Default Values
 // ----------------------------------------------------------------------
-div {
-  @include padding(10px, 10px, 10px, 10px);
-  @include margin(20px, 0, 10px, 0px);
-}
+// div {
+//   @include padding(10px, 10px, 10px, 10px);
+//   @include margin(20px, 0, 10px, 0px);
+// }
