Add linear gradient.

--- a/frontend/src/styles/abstracts/_mixins.scss
+++ b/frontend/src/styles/abstracts/_mixins.scss
@@ -38,7 +38,7 @@
   // Gradients
 
 // ----------------------------------------------------------------------
-// @import "mixins/linear-gradient";
+@import "mixins/linear-gradient";
 // @import "mixins/linear-gradient-angle";
 
 // ----------------------------------------------------------------------
