CW-173 Spacing SCSS (#91)
* Refactor spacing variables into its own scss.

* Implement basic spacing and related mixins.

* Move spacing import above typography.

* Remove default spacing.

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -3,6 +3,7 @@
 @import "abstracts/variables";
 
 @import "base/reset";
+@import "base/spacing";
 @import "base/typography";
 
 @import "components/buttons";
