CW-173 Colour SCSS (#92)
* Add linear gradient.

* Update _linear-gradient.scss

--- a/frontend/src/styles/abstracts/_mixins.scss
+++ b/frontend/src/styles/abstracts/_mixins.scss
@@ -39,7 +39,7 @@
   // Gradients
 
 // ----------------------------------------------------------------------
-// @import "mixins/linear-gradient";
+@import "mixins/linear-gradient";
 // @import "mixins/linear-gradient-angle";
 
 // ----------------------------------------------------------------------
