--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -31,6 +31,6 @@ $text-scale-ratio: 1.25;
   // Grid
 // ----------------------------------------------------------------------
 $grid-columns: 12;
-$grid-gap: 20px;
+$grid-gap: 40px;
 $gap-horizontal: $grid-gap;
-$gap-vertical: $grid-gap;
+$gap-vertical: $grid-gap * 3;
