--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -2,6 +2,7 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
+@import "base/icons";
 @import "base/reset";
 @import "base/spacing";
 @import "base/typography";
