Change icon scss location.

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -2,11 +2,11 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-@import "base/icons";
 @import "base/reset";
 @import "base/spacing";
 @import "base/typography";
 
+@import "components/icons";
 @import "components/buttons";
 @import "components/links";
 
