Add button scss.

--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -26,6 +26,8 @@ $maxWidth: 1280;
 // ----------------------------------------------------------------------
 $text-base-size: 1em;
 $text-scale-ratio: 1.25;
+$btn-font-size: 1em;
+$btn-radius: 5px;
 
 // ----------------------------------------------------------------------
   // Grid
