Upload the font files

--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -3,6 +3,13 @@
 // ----------------------------------------------------------------------
 
 @use "sass:math";
+// @font-face {
+//   font-family: "CustomFont";
+//   src: url("https://yoursite.com/css/fonts/CustomFont.eot");
+//   src: url("https://yoursite.com/css/fonts/CustomFont.woff") format("woff"),
+//   url("https://yoursite.com/css/fonts/CustomFont.otf") format("opentype"),
+//   url("https://yoursite.com/css/fonts/CustomFont.svg#filename") format("svg");
+// }
 
 // ----------------------------------------------------------------------
 	// #Type Scale
