CW-173 Button SCSS (#96)
* Add button scss.

* Rename files consistent with style guide.

* Add mixin for font smoothing.

* Complete inital button implementation.

--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -4,7 +4,8 @@
 $primary-color: #3333CC;
 $secondary-color-1: #66FFFF;
 $secondary-color-2: #9933CC;
-$dark-color: #000033;
+$dark-color-1: #000033;
+$dark-color-2: #191947;
 $light-color: #FFFFFF;
 $brand-color: #3A75F7;
 
@@ -26,6 +27,7 @@ $maxWidth: 1280;
 // ----------------------------------------------------------------------
 $text-base-size: 1em;
 $text-scale-ratio: 1.25;
+$btn-font-size: 1em;
 
 // ----------------------------------------------------------------------
   // Grid
