CW-173 Icon SCSS (#95)
* Add icon utility classes.

* Change icon scss location.

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -6,6 +6,7 @@
 @import "base/spacing";
 @import "base/typography";
 
+@import "components/icons";
 @import "components/buttons";
 @import "components/links";
 
