Recover the import of fonts and update the button

--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -87,6 +87,11 @@ p {
   line-height: $body-line-height;
   margin-bottom: $space-xxxs;
 }
+
+button {
+  font-size: $text-sm;
+  font-weight: 600;
+}
 // ----------------------------------------------------------------------
 	// #Text Component - class used to stylize blocks
 // ----------------------------------------------------------------------
