--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -26,7 +26,7 @@ $btn-lg: $btn-font-size+0.4em;
   text-decoration: none;
   line-height: 1;
 
-  padding: $space-xs $space-sm;
+  padding: $space-sm $space-md;
   border-radius: $btn-radius;
   font-size: $btn-font-size;
 
