Upload new fonts weights

--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -29,6 +29,14 @@ $text-base-size: 1em;
 $text-scale-ratio: 1.25;
 $btn-font-size: 1em;
 
+
+@font-face {
+    font-family: 'CoreSansC';
+    src: url('../../assets/fonts/CoreSansC-45Regular.woff') format("woff"),
+         url('../../assets/fonts/CoreSansC-25ExtraLight.woff') format("woff"),
+         url('../../assets/fonts/CoreSansC-65Bold.woff') format("woff");
+}
+
 // ----------------------------------------------------------------------
   // Grid
 // ----------------------------------------------------------------------
@@ -36,3 +44,4 @@ $grid-columns: 12;
 $grid-gap: 40px;
 $gap-horizontal: $grid-gap;
 $gap-vertical: $grid-gap * 3;
+
