refactored join us button (in progress)

--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -4,12 +4,21 @@
 
 // ----------------------------------------------------------------------
 
+.btn--joinUs {
+  @extend .btn--lg;
+  border: 2px solid #ffffff;
+  width: 250px;
+  text-align: center;
+  // TODO: Fix position depending on spacing
+  left: 1000px;
+}
+
 // ----------------------------------------------------------------------
 
 // #Variables
 
 // ----------------------------------------------------------------------
-$btn-radius: 5px;
+$btn-radius: 0px;
 
 // ----------------------------------------------------------------------
 
