added images for landing page and removed old code

--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -5,6 +5,7 @@
 @use "sass:math";
 
 .showcase--h1 {
+  padding-left: 7%;
   @extend h1;
   color: #ffffff;
   padding-right: 60vw;
@@ -13,6 +14,7 @@
 }
 
 .header {
+  padding-left: 7%;
   @extend h1;
   color: #ffffff;
 }
