--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -8,7 +8,8 @@
   padding-left: 7%;
   @extend h1;
   color: #ffffff;
-  padding-right: 60vw;
+  /*padding-right: 9em;*/
+  padding-right: 50vw;
   line-height: 95px;
   padding-top: 20vh;
 }
