Change the spacing unit to px

--- a/frontend/src/styles/base/_spacing.scss
+++ b/frontend/src/styles/base/_spacing.scss
@@ -5,15 +5,15 @@
 // ----------------------------------------------------------------------
   // #Spacing Values
 // ----------------------------------------------------------------------
-$space-xxxs: 1.25em; // 20px on desktop
-$space-xxs: 2.5em;   // 40px on desktop
-$space-xs: 3.75em;   // 60px on desktop
-$space-sm: 5em;      // 80px on desktop
-$space-md: 6.25em;   // 100px on desktop
-$space-lg: 10em;     // 160px on desktop
-$space-xl: 12.5em;   // 200px on desktop
-$space-xxl: 15em;    // 240px on desktop
-$space-xxxl: 17.5em;  // 280px on desktop
+$space-xxxs: 20px; // 20px on desktop
+$space-xxs: 40px;   // 40px on desktop
+$space-xs: 60px;   // 60px on desktop
+$space-sm: 80px;      // 80px on desktop
+$space-md: 100px;   // 100px on desktop
+$space-lg: 160px;     // 160px on desktop
+$space-xl: 200px;   // 200px on desktop
+$space-xxl: 240px;    // 240px on desktop
+$space-xxxl: 280px;  // 280px on desktop
 
 // ----------------------------------------------------------------------
   // #Default Values
