CW-212 Match CSS spacing to design guidelines (#112)
* Fix the spacing values

* Fix the spacing value on the internal link

* Remove extra padding in menu links

* Ensure menu footer display with correct spacing

* Change the units to em

* Change the units to em

* Resolve typos

* Remove extra whitespace.

* Change the spacing unit to px

* Remove extra space

Co-authored-by: Tommy Truong <glebme@yahoo.com>

--- a/frontend/src/styles/base/_spacing.scss
+++ b/frontend/src/styles/base/_spacing.scss
@@ -5,15 +5,15 @@
 // ----------------------------------------------------------------------
   // #Spacing Values
 // ----------------------------------------------------------------------
-$space-xxxs: 0.25em;
-$space-xxs: 0.375em;
-$space-xs: 0.5em;
-$space-sm: 0.75em;
-$space-md: 1.25em;
-$space-lg: 2em;
-$space-xl: 3.25em;
-$space-xxl: 5.25em;
-$space-xxxl: 8.5em;
+$space-xxxs: 20px; // 20px on desktop
+$space-xxs: 40px;   // 40px on desktop
+$space-xs: 60px;   // 60px on desktop
+$space-sm: 80px;      // 80px on desktop
+$space-md: 100px;   // 100px on desktop
+$space-lg: 160px;     // 160px on desktop
+$space-xl: 200px;   // 200px on desktop
+$space-xxl: 240px;    // 240px on desktop
+$space-xxxl: 280px;  // 280px on desktop
 
 // ----------------------------------------------------------------------
   // #Default Values
