CW-209 CW-211 : Landing page showcase and mission  (#115)
* refactored join us button (in progress)

* hover to join us button and correct typography to showcase

* added images for landing page and removed old code

* added header background image, sizing still work in progress

* header background image correctly sized

* landing page mission image added, no gradient yet

* fixied spacing

* Move typography and button into home.vue and fix font for mission paragraph

* Standardise whitespace.

* delete TODO comments and seperated showcase and community link tests

Co-authored-by: Tommy Truong <glebme@yahoo.com>

--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -4,12 +4,14 @@
 
 // ----------------------------------------------------------------------
 
+
+
 // ----------------------------------------------------------------------
 
 // #Variables
 
 // ----------------------------------------------------------------------
-$btn-radius: 5px;
+$btn-radius: 0px;
 
 // ----------------------------------------------------------------------
 
@@ -23,7 +25,7 @@ $btn-radius: 5px;
   text-decoration: none;
   line-height: 1;
 
-  padding: $space-sm $space-md;
+  padding: $space-xxxs $space-xxs;
   border-radius: $btn-radius;
 
   color: $light-color;
