add correct style to header and button

--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -5,7 +5,6 @@
 // ----------------------------------------------------------------------
 
 
-
 // ----------------------------------------------------------------------
 
 // #Variables
@@ -19,7 +18,7 @@ $btn-radius: 0px;
 
 // ----------------------------------------------------------------------
 .btn {
-  display: inline-flex;
+  //display: inline-flex;
   position: relative;
   white-space: nowrap;
   text-decoration: none;
