Apply scss variables to the footer.vue

--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -21,6 +21,7 @@ $success-color: #00FF66;
 	// Layout Breakpoints
 // ----------------------------------------------------------------------
 $maxWidth: 1280;
+$laptop-padding:72px;
 
 // ----------------------------------------------------------------------
 	// Font Sizes and Base Values
