Add colour import to global.

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -1,8 +1,8 @@
+@import "abstracts/colours";
 @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-@import "base/reset";
 @import "base/spacing";
 @import "base/typography";
 
