--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -1,22 +1,31 @@
 // ----------------------------------------------------------------------
+// Buttons
+// ----------------------------------------------------------------------
 
 // Buttons
+//
+// Various button styles. All buttons should come with a size.
+// Only small buttons can come with primary, secondary or accent 
+// gradients.
+//
+// Markup:
+// <button class="btn {{modifier_class}}">Button Element</button>
+//
+// .btn--sm - Small button
+// .btn--lg - Large button
+// .btn--primary - Small primary button.
+// .btn--secondary - Small secondary button.
+// .btn--accent - Small accent button. 
+//
+// Styleguide Components.button
 
 // ----------------------------------------------------------------------
-
-
-
-// ----------------------------------------------------------------------
-
 // #Variables
+// ----------------------------------------------------------------------
+$btn-radius: 5px;
 
 // ----------------------------------------------------------------------
-$btn-radius: 0px;
-
-// ----------------------------------------------------------------------
-
 // #Default Variables
-
 // ----------------------------------------------------------------------
 .btn {
   display: inline-flex;
@@ -26,7 +35,6 @@ $btn-radius: 0px;
   line-height: 1;
 
   padding: $space-xxxs $space-xxs;
-  border-radius: $btn-radius;
 
   color: $light-color;
 
@@ -42,18 +50,42 @@ $btn-radius: 0px;
   }
 }
 
-.btn-primary {
+// ----------------------------------------------------------------------
+// #Sizing Variations
+// ----------------------------------------------------------------------
+.btn--sm {
   @extend .btn;
+  font-size: $text-sm;
+  border-radius: $btn-radius;
+}
+
+.btn--lg {
+  @extend .btn;
+  font-size: $text-lg;
+  border: 2px solid $light-color;
+}
+
+.btn--full-width {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+// ----------------------------------------------------------------------
+// #Colour Variations
+// ----------------------------------------------------------------------
+.btn--primary {
+  @extend .btn--sm;
   @include linearGradient($primary-color, $secondary-color-2)
 }
 
-.btn-secondary {
-  @extend .btn;
+.btn--secondary {
+  @extend .btn--sm;
   @include linearGradient($primary-color, $secondary-color-1)
 }
 
-.btn-accent {
-  @extend .btn;
+.btn--accent {
+  @extend .btn--sm;
   @include linearGradient($dark-color-1, $dark-color-2);
   outline-color: $light-color;
 }
@@ -67,30 +99,7 @@ $btn-radius: 0px;
 }
 
 // ----------------------------------------------------------------------
-
-// #Sizing Variations
-
-// ----------------------------------------------------------------------
-.btn--sm {
-  @extend .btn;
-  font-size: $text-sm;
-}
-
-.btn--lg {
-  @extend .btn;
-  font-size: $text-lg;
-}
-
-.btn--full-width {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-}
-
-// ----------------------------------------------------------------------
-
 // #Button Groups
-
 // ----------------------------------------------------------------------
 .btns {
   display: flex;
