--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -4,7 +4,7 @@
 $primary-color: #3333CC;
 $secondary-color-1: #66FFFF;
 $secondary-color-2: #9933CC;
-$dark-color-1: #000033;
+$dark-color-1: #000033; // for main background
 $dark-color-2: #191947;
 $light-color: #FFFFFF;
 $brand-color: #3A75F7;
@@ -21,6 +21,7 @@ $success-color: #00FF66;
 	// Layout Breakpoints
 // ----------------------------------------------------------------------
 $maxWidth: 1280;
+$laptop-padding:72px;
 
 // ----------------------------------------------------------------------
 	// Font Sizes and Base Values
