Add content living style guide.

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -6,8 +6,9 @@
 @import "base/spacing";
 @import "base/typography";
 
-@import "components/icons";
 @import "components/buttons";
+@import "components/content";
+@import "components/icons";
 @import "components/links";
 
 @import "layout/footer";
