--- a/frontend/src/styles/components/_buttons.scss
+++ b/frontend/src/styles/components/_buttons.scss
@@ -18,7 +18,7 @@ $btn-radius: 5px;
 
 // ----------------------------------------------------------------------
 .btn {
-  //display: inline-flex;
+  display: inline-flex;
   position: relative;
   white-space: nowrap;
   text-decoration: none;
